# me

./: CNAME  README.md  about.markdown  contact.markdown  index.html  me.cabal  site.hs  stack.yaml
.github/workflows/: main.yml
css/: default.css
posts/: 2026-01-16-creating-static-site-with-hakyll.markdown
projects/: 2024-01-15-chess.markdown  2025-01-15-rose.markdown  2025-12-16.vulgar.markdown  2025-12-25-zemac.markdown  chess.markdown  rose.markdown  zemac.markdown
templates/: archive.html  default.html  nav.html  post.html  project.html  projects.html
